LMS-demo/force-app/main/default/objects/Student__c/fields/Student_Fees__c.field-meta.xml
<CustomField>
    <fullName>Student_Fees__c</fullName>
    <label>Student Fees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>