LMS-demo/force-app/main/default/objects/Student__c/fields/Student_Phone__c.field-meta.xml
<CustomField>
    <fullName>Student_Phone__c</fullName>
    <label>Student Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>