LMS-demo/force-app/main/default/objects/Student__c/fields/Student_s_Father_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_s_Father_s_Name__c</fullName>
    <label>Student&apos;s Father&apos;s Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>