LMS-demo/force-app/main/default/objects/Student__c/validationRules/Phone_Number_Char_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Char_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
REGEX( Student_Phone__c , &quot;[0-9 ]+&quot;),
REGEX( Student_Phone__c , &quot;\\+[0-9 ]+&quot;))
)</errorConditionFormula>
    <errorDisplayField>Student_Phone__c</errorDisplayField>
    <errorMessage>Phone numbers can only have numeric digits!</errorMessage>
</ValidationRule>